vcl/unx/kde4/KDESalInstance.cxx
@@ -22,6 +22,8 @@
 
 #include "KDESalFrame.hxx"
 
+#include "KDEXLib.hxx"
+
 using namespace com::sun::star;
 
 SalFrame* KDESalInstance::CreateFrame( SalFrame *pParent, sal_uLong nState )
@@ -33,7 +35,7 @@ uno::Reference< ui::dialogs::XFilePicker2 > KDESalInstance::createFilePicker(
         const uno::Reference< uno::XComponentContext >& xMSF )
 {
     return uno::Reference< ui::dialogs::XFilePicker2 >(
-                new KDE4FilePicker( xMSF ) );
+        static_cast<KDEXLib*>( mpXLib )->createFilePicker(xMSF) );
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
